--- a/app/public/css/styles.css
+++ b/app/public/css/styles.css
@@ -87,6 +87,18 @@ hr {
     border-color: #6c757d;
 }
 
+.btn-tags {
+    color: #0d6efd;
+    background: none;
+    border-color: #0d6efd;
+}
+
+.btn-tags:hover {
+    color: white;
+    background: #0d6efd;
+    border-color: #0d6efd;
+}
+
 button > a {
     color: white;
     text-decoration: none;
@@ -97,84 +109,84 @@ button > a:hover {
     text-decoration: none;
 }
 
-.create_item{
-    color: white;
-    background: #8cd98c;
-    border: 2px #40bf40 solid;
-    border-radius: 25px;
-    padding: 5px 15px 5px 15px;
-    margin-right: 10px;
-    position: absolute;
-    right: 0;
-    top: 10px;
+/*.create_item{*/
+/*    color: white;*/
+/*    background: #8cd98c;*/
+/*    border: 2px #40bf40 solid;*/
+/*    border-radius: 25px;*/
+/*    padding: 5px 15px 5px 15px;*/
+/*    margin-right: 10px;*/
+/*    position: absolute;*/
+/*    right: 0;*/
+/*    top: 10px;*/
 
-}
-.show_item{
-    color: white;
-    background: #6699ff;
-    border: 2px #3377ff solid;
-    border-radius: 25px;
-    padding: 5px 15px 5px 15px;
-    margin-right: 10px;
-}
-.delete_item{
-    color: white;
-    background: #ff8080;
-    border: 2px #ff0000 solid;
-    border-radius: 25px;
-    padding: 5px 15px 5px 15px;
-    margin-right: 10px;
-}
-.edit_item{
-    color: white;
-    background: #ffd633;
-    border: 2px #ffd11a solid;
-    border-radius: 25px;
-    padding: 5px 15px 5px 15px;
-    margin-right: 10px;
-}
-.delete_icon{
-    transition: 0.2s linear;
-    width: 30px;
-    opacity: 70%;
-}
-.delete_icon:hover{
-    opacity: 100%;
-}
-.add_icon{
-    transition: 0.2s linear;
-    width: 40px;
-    opacity: 70%;
-    position: absolute;
-    right: 40px;
-    top: 8px;
-    z-index: 0;
-}
-.add_icon:hover{
-    opacity: 100%;
-}
-.title_of_page{
-    margin: 20px 0 20px 0;
-}
-.right{
-    position: absolute;
-    right: 40px;
-    top: 10%;
-}
-.right_element{
-    font-size: 14px;
-    text-align: center;
-    z-index: 999;
-    padding: 30px 30px;
-    position: fixed;
-    right: 5%;
-    top: 80vh;
-    color: white;
-    background: rgba(1,1,1,0.8);
-    border-radius: 100px;
-    transition: 0.5s linear;
-}
-.right_element:hover{
-    background:rgba(1,1,1,1) ;
-}
+/*}*/
+/*.show_item{*/
+/*    color: white;*/
+/*    background: #6699ff;*/
+/*    border: 2px #3377ff solid;*/
+/*    border-radius: 25px;*/
+/*    padding: 5px 15px 5px 15px;*/
+/*    margin-right: 10px;*/
+/*}*/
+/*.delete_item{*/
+/*    color: white;*/
+/*    background: #ff8080;*/
+/*    border: 2px #ff0000 solid;*/
+/*    border-radius: 25px;*/
+/*    padding: 5px 15px 5px 15px;*/
+/*    margin-right: 10px;*/
+/*}*/
+/*.edit_item{*/
+/*    color: white;*/
+/*    background: #ffd633;*/
+/*    border: 2px #ffd11a solid;*/
+/*    border-radius: 25px;*/
+/*    padding: 5px 15px 5px 15px;*/
+/*    margin-right: 10px;*/
+/*}*/
+/*.delete_icon{*/
+/*    transition: 0.2s linear;*/
+/*    width: 30px;*/
+/*    opacity: 70%;*/
+/*}*/
+/*.delete_icon:hover{*/
+/*    opacity: 100%;*/
+/*}*/
+/*.add_icon{*/
+/*    transition: 0.2s linear;*/
+/*    width: 40px;*/
+/*    opacity: 70%;*/
+/*    position: absolute;*/
+/*    right: 40px;*/
+/*    top: 8px;*/
+/*    z-index: 0;*/
+/*}*/
+/*.add_icon:hover{*/
+/*    opacity: 100%;*/
+/*}*/
+/*.title_of_page{*/
+/*    margin: 20px 0 20px 0;*/
+/*}*/
+/*.right{*/
+/*    position: absolute;*/
+/*    right: 40px;*/
+/*    top: 10%;*/
+/*}*/
+/*.right_element{*/
+/*    font-size: 14px;*/
+/*    text-align: center;*/
+/*    z-index: 999;*/
+/*    padding: 30px 30px;*/
+/*    position: fixed;*/
+/*    right: 5%;*/
+/*    top: 80vh;*/
+/*    color: white;*/
+/*    background: rgba(1,1,1,0.8);*/
+/*    border-radius: 100px;*/
+/*    transition: 0.5s linear;*/
+/*}*/
+/*.right_element:hover{*/
+/*    background:rgba(1,1,1,1) ;*/
+/*}*/
 
