--- a/app/templates/question/tags.html.twig
+++ b/app/templates/question/tags.html.twig
@@ -20,11 +20,9 @@
                 <tr>
                     <th>{{ knp_pagination_sortable(pagination, 'label.id'|trans, 'question.id') }}</th>
                     <th>{{ knp_pagination_sortable(pagination, 'label.created_at'|trans, 'question.createdAt') }}</th>
-                    <th>{{ knp_pagination_sortable(pagination, 'label.updated_at'|trans, 'question.updatedAt') }}</th>
                     <th>{{ knp_pagination_sortable(pagination, 'label.title'|trans, 'question.title') }}</th>
                     <th>{{ knp_pagination_sortable(pagination, 'label.category'|trans, 'category.title') }}</th>
-                    <th>{{ 'label.tag'|trans }}</th>
-                    <th>{{ 'label.author'|trans }}</th>
+                    <th>{{ 'label.tags'|trans }}</th>
                     <th>{{ 'label.actions'|trans }}</th>
                 </tr>
                 </thead>
@@ -33,23 +31,17 @@
                     <tr>
                         <td>{{ question.id }}</td>
                         <td>{{ question.createdAt|format_date('long') }}</td>
-                        <td>{{ question.updatedAt|format_date('long') }}</td>
                         <td>{{ question.title }}</td>
-                        <td>{{ question.category.title }}</td>
+                        <td><a href="{{ url('question_show_by_category', {id: question.category.id}) }}">{{ question.category.title }}</a></td>
                         <td>
                             {% if question.tags is defined and question.tags|length %}
                                 {% for tag in question.tags %}
-                                    <a class="btn btn-outline-primary"
-                                       href="{{ url('question_index', {'tagId' : tag.id}) }}"
-                                       title="{{ tag.title }}">
-                                        {{ tag.title }}
-                                    </a>
+                                    <a class="btn btn-outline- btn-tags" href="{{ url('question_show_by_tags', {id: tag.id}) }}">{{ tag.title }}</a>
                                 {% endfor %}
                             {% else %}
                                 &nbsp;
                             {% endif %}
                         </td>
-                        <td>{{ question.author.nickname }}</td>
                         <td>
                             {% if is_granted('ROLE_ADMIN') or is_granted('EDIT', question) and is_granted('DELETE', question) %}
                                 <div class="dropdown">
@@ -68,7 +60,9 @@
                                     </ul>
                                 </div>
                             {% else %}
-                                <a class="btn btn-primary btn-sm" type="button" href="{{ url('question_show', {id: question.id}) }}" title="{{ 'action.show'|trans }}">{{ 'action.show'|trans }}</a>
+                                <button class="btn btn-secondary">
+                                    <a href="{{ url('question_show', {id: question.id}) }}" title="{{ 'action.show'|trans }}">{{ 'action.show'|trans }}</a>
+                                </button>
                             {% endif %}
                         </td>
                     </tr>
